added delete and touched up some details

--- a/PAM/Views/Home/Delete.cshtml
+++ b/PAM/Views/Home/Delete.cshtml
@@ -2,9 +2,17 @@
     ViewData["Title"] = "Delete";
 }
 
+@model IEnumerable<PAM.Models.Request>
 
 <body>
+    <div class="text-center">
+        <h1>Confirm Delete?</h1>
     <form asp-controller="Home" asp-action="Delete" method="post">
-        
+        <button type="submit" class="btn btn-info"> Yes </button>
     </form>
+     </br>
+    <form asp-controller="Home" asp-action="Registrations" method="get">
+        <button type="submit" class="btn btn-info"> No </button>
+    </form>
+    </div>
 </body>
