--- a/PAM/Views/Home/Registrations.cshtml
+++ b/PAM/Views/Home/Registrations.cshtml
@@ -1,5 +1,11 @@
 ﻿@using PAM.Models
+@using PAM.Extensions
 
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+@{
+    var requester = HttpContextAccessor.HttpContext.Session.GetObject<Requester>("Requester");
+    ViewData["Title"] = "Registrations";
+}
 @model IEnumerable<PAM.Models.Request>
 
 <body>
@@ -23,9 +29,8 @@
                     <thead class="thead-dark">
                         <tr>
                             <th scope="col"> # </th>
-                            <th scope="col"> Date / Department </th>
+                            <th scope="col"> Date </th>
                             <th scope="col"> Type </th>
-                            <th scope="col"> Default / Additional </th>
                             <th scope="col"> Prepared by </th>
                             <th scope="col"> Status </th>
                             <th scope="col"> Action </th>
@@ -64,39 +69,37 @@
                                 }
                             }
                         </td>
-                        <td>@item.SumbittedOn</td>
+                        <td>@requester.FirstName</td>
                         <td>@item.RequestStatus</td>
-                        <td>@item.SumbittedOn</td>
                         <td>
                             <a asp-action="Edit">Edit</a> |
                             <a asp-action="View">View</a> |
-                            <a asp-action="Delete" asp-route-id="item.RequestId">Delete</a>
+                            <a asp-action="Delete" asp-route-id="@item.RequestId">Delete</a>
                         </td>
                     </tr>
                 }
                 </table>
             </div>
             <div class="tab-pane fade" id="status">
-                <table class="table table-hover">
+                <table class="table table-hover table-responsive-xl">
                     <thead class="thead-dark">
                         <tr>
                             <th scope="col"> # </th>
-                            <th scope="col"> Date / Department </th>
-                            <th scope="col"> Type</th>
-                            <th scope="col"> Default / Additional </th>
+                            <th scope="col"> Date </th>
+                            <th scope="col"> Type </th>
                             <th scope="col"> Prepared by </th>
                             <th scope="col"> Status </th>
                             <th scope="col"> Action </th>
                         </tr>
                     </thead>
-               @foreach (var item in Model)
+               @foreach (var item in Model ?? Enumerable.Empty<Request>())
                {
                     <tr>
-                        <td>@Html.DisplayFor(modelItem => item.RequestId)</td>
+                        <td>@Html.DisplayFor(modelItem => item.RequestedById)</td>
                         <td>@Html.DisplayFor(modelItem => item.SumbittedOn)</td>
                         <td>
                             @{
-                                switch (item.RequestTypeId)
+                                switch (@item.RequestTypeId)
                                 {
                                     case 1:
                                         <text> New Hire </text>
@@ -122,9 +125,8 @@
                                 }
                             }
                         </td>
-                        <td>@Html.DisplayFor(modelItem => item.SumbittedOn)</td>
-                        <td>@Html.DisplayFor(modelItem => item.RequestStatus)</td>
-                        <td>@Html.DisplayFor(modelItem => item.RequestStatus)</td>
+                        <td>@requester.FirstName</td>
+                        <td>@item.RequestStatus</td>
                         <td>
                             <a asp-action="Edit">Edit</a> |
                             <a asp-action="View">View</a> |
@@ -135,26 +137,25 @@
                 </table>
             </div>
             <div class="tab-pane fade" id="allreg">
-                <table class="table table-hover">
+                <table class="table table-hover table-responsive-xl">
                     <thead class="thead-dark">
                         <tr>
                             <th scope="col"> # </th>
-                            <th scope="col"> Date / Department </th>
+                            <th scope="col"> Date </th>
                             <th scope="col"> Type </th>
-                            <th scope="col"> Default / Additional </th>
                             <th scope="col"> Prepared by </th>
                             <th scope="col"> Status </th>
                             <th scope="col"> Action </th>
                         </tr>
                     </thead>
-               @foreach (var item in Model)
+               @foreach (var item in Model ?? Enumerable.Empty<Request>())
                {
                     <tr>
-                        <td>@Html.DisplayFor(modelItem => item.RequestId)</td>
+                        <td>@Html.DisplayFor(modelItem => item.RequestedById)</td>
                         <td>@Html.DisplayFor(modelItem => item.SumbittedOn)</td>
                         <td>
                             @{
-                                switch (item.RequestTypeId)
+                                switch (@item.RequestTypeId)
                                 {
                                     case 1:
                                         <text> New Hire </text>
@@ -180,9 +181,8 @@
                                 }
                             }
                         </td>
-                        <td>@Html.DisplayFor(modelItem => item.SumbittedOn)</td>
-                        <td>@Html.DisplayFor(modelItem => item.RequestStatus)</td>
-                        <td>@Html.DisplayFor(modelItem => item.RequestStatus)</td>
+                        <td>@requester.FirstName</td>
+                        <td>@item.RequestStatus</td>
                         <td>
                             <a asp-action="Edit">Edit</a> |
                             <a asp-action="View">View</a> |
@@ -190,7 +190,6 @@
                         </td>
                     </tr>
                 }
-
                 </table>
             </div>
         </div>
