self & not self + delete

--- a/PAM/Views/Home/Registrations.cshtml
+++ b/PAM/Views/Home/Registrations.cshtml
@@ -40,7 +40,7 @@
                {
                     <tr>
                         <td>@Html.DisplayFor(modelItem => item.RequestedById)</td>
-                        <td>@Html.DisplayFor(modelItem => item.SumbittedOn)</td>
+                        <td>@Html.DisplayFor(modelItem => item.SubmittedOn)</td>
                         <td>
                             @{
                                 switch (@item.RequestTypeId)
@@ -96,7 +96,7 @@
                {
                     <tr>
                         <td>@Html.DisplayFor(modelItem => item.RequestedById)</td>
-                        <td>@Html.DisplayFor(modelItem => item.SumbittedOn)</td>
+                        <td>@Html.DisplayFor(modelItem => item.SubmittedOn)</td>
                         <td>
                             @{
                                 switch (@item.RequestTypeId)
@@ -152,7 +152,7 @@
                {
                     <tr>
                         <td>@Html.DisplayFor(modelItem => item.RequestedById)</td>
-                        <td>@Html.DisplayFor(modelItem => item.SumbittedOn)</td>
+                        <td>@Html.DisplayFor(modelItem => item.SubmittedOn)</td>
                         <td>
                             @{
                                 switch (@item.RequestTypeId)
