--- a/PAM/wwwroot/css/styles.css
+++ b/PAM/wwwroot/css/styles.css
@@ -120,6 +120,10 @@
     font-size: 16px;
     height: 25px;
 }
+
+input.invalid {
+    background-color: #ffdddd;
+}
 /*----------------------------------------------------------
     [ Loading Modal ]
 */
