--- a/PAM/Views/Shared/_Layout.cshtml
+++ b/PAM/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
         <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/Home/Registrations">Registrations</a>
+                    <a class="nav-link" href="/Registrations/Registrations">Registrations</a>
                 </li>
                 <!--
                 <li class="nav-item active">
